# Magic

./: .buildinfo  .gitignore  LICENSE  Magic.code-workspace  README.md  genindex.html  index.html  search.html  searchindex.js  setup.cfg
.github/workflows/: documentation.yml  sphinx.yml
_sources/: index.rst.txt
_static/: doctools.js  searchtools.js
ancil/: WDfilenameList.csv
docs/: conf.py  genindex.html  index.html  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/html/: objects.inv  search.html  searchindex.js
docs/html/.doctrees/: environment.pickle
docs/source/: conf.py  index.rst
src/magic/: S2_sky.py  S3_image.py  S4_trends.py  colorcolor.py  make_magic.py  miri_wd.py  plots.py  quickLook.py  replace_nans.py  run_ql.py  util.py
src/magic/lib/: util.py
src/magic/ql/: quickLook.py  run_ql.py
src/meow/: S2_sky.py  S3_image.py  S4_trends.py  colorcolor.py  meow_ql.py  plots.py  quickLook.py  run_meow.py  run_ql.py  util.py
src/meow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
