[metadata]
name = meow
author = Kevin Stevenson, Mary Anne Limbach, et al.
author_email = kbstevenson@gmail.com
description = MIRI search for Exoplanets Orbiting White-dwarfs (MEOW)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = [LICENSE,]
url = https://github.com/kevin218/MEOW
project_urls =
    Bug Tracker = https://github.com/kevin218/MEOW/issues
    Source Code = https://github.com/kevin218/MEOW
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.8
install_requires =
    astraeus@git+https://github.com/kevin218/Astraeus@main
    astropy
    astroquery
    crds
    lmfit
    matplotlib
    numpy>=1.20.0
    pandas
    photutils
    scipy>=1.4.0 # Lower limit needed for scipy.fft
    stdatamodels
    svo_filters
    tqdm
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme


[options.packages.find]
where = src


[options.extras_require]
jwst =
    jwst==1.12.2
    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
docs =
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
test =
    flake8
    pytest
    pytest-cov
    pytest-doctestplus


[flake8]
# Error codes explained here: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
select = E1,E2,E3,E4,E5,E7,W6,F
ignore = W504,W503,E704,E226,E722
exclude =
    # Ignore built files
    ./build/**/*
    **/site-packages/**/*
    # Ignore docs
    ./docs/**/*
    # Ignore VS Code files
    .vscode/*
    # Ignore files in my ecfs folder
    ./ecfs/*
    # Ignore run_meow.py files in demos folder
    **/run_meow*.py
per-file-ignores =
    # Need to have unused imports in the init files
    **/__init__.py:F401
    # Need unused imports in the init files, need to mute some warnings
    ./src/meow/__init__.py:F401,E402
    # Using exec commands, so variable is actually used
    **/manageevent.py:F841
    # Need to allow prepending to PATH
    ./demos/**/run_*.py:E402
    # Need to protect against crashes if jwst not installed
    **/test_*.py:E402
    # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
    **/readECF.py:F401
